--- a/express-server/package.json
+++ b/express-server/package.json
@@ -12,7 +12,8 @@
   "author": "emgei",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
